--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
                         </div>
                     <div class="socialmedia">
-                        <div class="pop"><a href="https://www.linkedin.com/in/lokesh-pandey-a08574202/">Linkdin</a></div>
+                        <div class="pop"><a href="https://www.linkedin.com/in/lokesh-pandey-a08574202/">Linkedin</a></div>
                         <div class="poi"> <a href="https://github.com/lokeshs333">Github</a> </div>
                         <div class="poiu"> <a href="https://www.instagram.com/_lokesh_pandey_/">Instagram</a> </div>
                         
