--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
 
 </head>
-<!-- Start of Async Drift Code -->
+<!-- Start of Async Drift Code.. -->
 <script>
     "use strict";
 
